Picture-in-Picture: set playback state when setting a new surface.

When EmbedSurface() is called, always check the playback state of the
associated media player if there is one so we can guarantee that the
Picture-in-Picture window matches the current known state.

Bug: 868449
Change-Id: Iad61dcc67d5b6f4acc75dc5490883ea9733e75ad
Reviewed-on: https://chromium-review.googlesource.com/1153464
Reviewed-by: apacible <apacible@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579052}
Former-commit-id: 118bcd191075a58171f2b3c2e74d5ee0ae77a9a2