chrome/browser/ui/views/overlay/overlay_window_views.h
@@ -65,7 +65,7 @@ class OverlayWindowViews : public content::OverlayWindow,
   // Send the message that a custom control on |this| has been clicked.
   void ClickCustomControl(const std::string& control_id);
 
-  views::View* play_pause_controls_view_for_testing() const;
+  views::ToggleImageButton* play_pause_controls_view_for_testing() const;
 
  private:
   // Gets the internal |ui::Layer| of the controls.
